# calgo_all

./: CMakeLists.txt  general2.mm
.github/workflows/: fu.yml  github-actions-demo.yml
lab3/lab3D/: main.cpp
lab3/lab3a/: CMakeLists.txt  main.cpp
lab3/lab3b/: CMakeLists.txt  main.cpp
lab3/lab3c/: CMakeLists.txt  main.cpp
lab3/lab3dneww/: CMakeLists.txt  main.cpp
lab4/lab4a/: CMakeLists.txt  main.cpp
lab4/lab4b/: main.cpp
lab4/lab4c/: CMakeLists.txt  main.cpp
lab4/lab4d/: CMakeLists.txt  main.cpp
lab4/lab4e/: CMakeLists.txt  main.cpp
lab4/lab4f/: CMakeLists.txt  main.cpp
lab5/lab5a/: CMakeLists.txt  main.cpp
lab5/lab5b/: CMakeLists.txt  main.cpp
lab5/lab5c/: CMakeLists.txt  main.cpp
lab5/lab5d/: CMakeLists.txt  main.cpp
lab6/lab6a/: CMakeLists.txt  main.cpp
lab6/lab6b/: CMakeLists.txt  main.cpp
lab6/lab6c/: CMakeLists.txt  main.cpp
lab6/lab6d/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  lab7a.cpp  lab7b.cpp  lab7c.cpp  lab7d.cpp  lab7e.cpp
lab7/Tests/: AVLTree.h  test.cpp
