cmake_minimum_required(VERSION 3.20)
add_subdirectory(lab7/lib/googletest-main)
include_directories(lab7/lib/googletest-main/googletest/include)
include_directories(lab7/lib/googletest-main/googlemock/include)
project(lab7a)
project(lab7b)
project(lab7c)
project(lab7d)
project(lab7e)
set(CMAKE_CXX_STANDARD 17)

add_executable(lab7a lab7/lab7a.cpp)
add_executable(lab7b lab7/lab7b.cpp)
add_executable(lab7c lab7/lab7c.cpp)
add_executable(lab7d lab7/lab7d.cpp)
add_executable(lab7e lab7/lab7e.cpp lab7/Tests/AVLTree.h lab7/Tests/test.cpp)
target_link_libraries(lab7e gtest gtest_main)
