cmake_minimum_required(VERSION 3.20)
project(lab7a)
project(lab7b)
project(lab7c)
project(lab7d)
project(lab7e)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab7a lab7a.cpp)
add_executable(lab7b lab7b.cpp)
add_executable(lab7c lab7c.cpp)
add_executable(lab7d lab7d.cpp)
add_executable(lab7e lab7e.cpp)
